GetTasksTodoMicroservice/manifests/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind:  Ingress
metadata:
  name:  ingress-gettasks 
  labels:
    app:  gettasks
spec:  
  ingressClassName:  azure-application-gateway
  rules:
  - host: gettasks.techno028.shop
    http:
     paths:
     - path: "/"
       pathType:  Prefix
       backend:
         service:
           name:   todo-get-task-api
           port: 
            number:  80
